skin/styl/core/buttons.styl
.{root}

   // play button = separate centered image
   .fp-ui

      .is-splash&, .is-paused&
         background 'url(%s.png) center no-repeat' % unquote(img_play)
         background-size 11%

         .is-rtl&
            background 'url(%s.png) center no-repeat' % unquote(img_play_rtl)
            background-size 11%

         @media (-webkit-min-device-pixel-ratio: 2),(min-resolution: 2dppx)
            background 'url(%s@x2.png) center no-repeat' % unquote(img_play)
            background-size 11%

            .is-rtl&
               background 'url(%s@x2.png) center no-repeat' % unquote(img_play_rtl)
               background-size 11%

      .is-fullscreen&
         background-size auto

      .is-seeking&, .is-loading&
         background-image none

   .fp-brand
      color #f !important
      position absolute
      right right_margin
      font-weight normal !important
      font-family font_family
      text-decoration none !important
      line-height font_size + 4 !important
      font-size font_size !important
      height font_size + 4
      width brand_width
      bottom spacing - 1
      box-sizing border-box
      text-align center
      padding 1px
      white-space nowrap
      text-overflow ellipsis
      overflow hidden
      .has-menu&
        right volume_width + controls_height + spacing * 2 + menu_width
      .is-rtl&
        right auto
        left volume_width + controls_height + spacing * 2
      .has-menu.is-rtl&
        left volume_width + controls_height + spacing * 2 + menu_width
      .no-brand&
        display none
      .no-volume.no-mute&
        right spacing
        .has-menu&
          right spacing * 2 + menu_width
      .no-volume&
        right spacing * 2 + mute_width
      .no-mute&
        right spacing * 2 + volume_width

   .fp-logo
      absolute auto 15px
      bottom controls_height + 10px
      cursor pointer
      display none
      z-index 100

      img
         width 100%

      .is-embedded&
         display block

      .fixed-controls&
         bottom 15px

    .fp-buttons
      absolute spacing auto
      right spacing
      .is-rtl&
         right auto
         left spacing

   .fp-fullscreen, .fp-unload, .fp-close
      display inline-block
      text-align center
      cursor pointer
      height controls_height
      width controls_height

   .fp-unload, .fp-close
      display none

   .fp-play
      display none
      //width play_width !important
      height controls_height !important
      position absolute
      bottom 0
      left 0
      text-align center

      .is-rtl&
         left auto
         right 0

      .is-playing&
         &:before
           content: "\e607"

   .fp-menu
      display none
      position absolute
      bottom 0px
      z-index 11
      right spacing
      .is-rtl&
        right auto
        left spacing
      .has-menu&
         display block
      .fp-dropdown
         z-index 12
         display none
         left -42.5px
         line-height auto
         width spacing + volume_width + spacing + menu_width * 2
         transform none
         .is-rtl&
          left -(spacing)
      &.dropdown-open
         .fp-dropdown
            display block
   &.is-ready.is-closeable
      .fp-unload
         display inline-block
   &.is-fullscreen
      .fp-fullscreen
         display block !important
         &:before
          content "\e601"

